compiler/testData/diagnostics/testsWithExplicitApi/basic.kt
<!NO_EXPLICIT_VISIBILITY_IN_API_MODE!>fun foo()<!> {

}

<!NO_EXPLICIT_RETURN_TYPE_IN_API_MODE, NO_EXPLICIT_VISIBILITY_IN_API_MODE!>fun bar()<!> = 10